// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartTrialModalContent Rendering Trial Modal with one license 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-xxxlarge"
  >
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-top-xxlarge"
    >
      common.purpose.welcome
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="cd-main"
      >
        <svg
          height="25"
          viewBox="0 0 32 32"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
            fill="url(#cd-main_svg__a)"
            fill-rule="evenodd"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="cd-main_svg__a"
              x1="6.774"
              x2="21.5"
              y1="2"
              y2="30"
            >
              <stop
                stop-color="#62F91F"
              />
              <stop
                offset="1"
                stop-color="#45BD35"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
      >
        cd.continuous
      </p>
    </div>
    <span
      style="line-height: 2; font-size: small;"
    >
      common.purpose.cd.description
    </span>
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--padding-top-xlarge"
      >
        common.purpose.howToProceed
      </h1>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card card infoCard cd Card--selected"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
        >
          <span
            class="bp3-icon StyledProps--main commandApproval"
            data-icon="command-approval"
          >
            <svg
              height="40"
              viewBox="0 0 14 14"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.5 3.8c-.1-.1-.4-.2-.6-.2-.5 0-.9.4-.9.8 0 .3.1.5.3.6L8 6.8c.2.1.4.2.7.2s.5-.1.6-.2l4.4-4.3c.2-.2.3-.4.3-.6 0-.5-.4-.9-.9-.9-.2 0-.5.1-.6.2L8.7 4.9zm4.7 2.6c0 .2.1.4.1.6 0 2.9-2.4 5.2-5.2 5.2S1.8 9.9 1.8 7 4.1 1.8 7 1.8c.7 0 1.4.1 2 .4L10.3.9C9.3.3 8.2 0 7 0 3.1 0 0 3.1 0 7s3.1 7 7 7 7-3.1 7-7c0-.7-.1-1.4-.3-2.1z"
                fill="#4d5969"
              />
            </svg>
          </span>
          <div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
              >
                common.purpose.cd.1stGen.title
              </p>
            </div>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small StyledProps--color StyledProps--color-black"
        >
          common.purpose.cd.1stGen.description
        </p>
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-top-large"
        >
          <p
            class="StyledProps--font StyledProps--main footerTitle StyledProps--color StyledProps--color-black"
          >
            common.purpose.cd.supportedStack
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main enabled"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                data-icon="app-aws-code-deploy"
              >
                <svg
                  height="16"
                  viewBox="0 0 28 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                  >
                    <path
                      d="M4 26l-4-1.732V6.732L4 5z"
                      fill="#4B612C"
                    />
                    <path
                      d="M18 22.536L3 26V5l15 3.464z"
                      fill="#759C3E"
                    />
                    <path
                      d="M7 12.8l6.781-.8.219.2v6.6l-.219.2L7 18.2z"
                      fill="#4B612C"
                    />
                    <path
                      d="M28 11.25l-6.682.75L7 9.5 14.398 7z"
                      fill="#3C4929"
                    />
                    <path
                      d="M27 21.667L20.318 21 6 23.222 13.875 25z"
                      fill="#B7CA9D"
                    />
                    <path
                      d="M7 28.786L13.781 32 14 24.714 7 23z"
                      fill="#4B612C"
                    />
                    <path
                      d="M26 25.714L14 32v-7.633L26 21z"
                      fill="#759C3E"
                    />
                    <path
                      d="M7 3.214L14 0v7.286L7 9z"
                      fill="#4B612C"
                    />
                    <path
                      d="M27.25 18.667L13 20.3v-8.167L27.25 14zm0-7L13 8.167V.233l14.25 6.534z"
                      fill="#759C3E"
                    />
                  </g>
                </svg>
              </span>
            </p>
            <p
              class="StyledProps--font StyledProps--main enabled"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                data-icon="service-aws-lamda"
              >
                <svg
                  height="16"
                  viewBox="0 0 12 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M.3 11.1l.7.4.1-.2V2.6L.3 3z"
                    fill="#9d5025"
                  />
                  <path
                    d="M2.5 3l-1.4-.4v8.8l1.4-.3z"
                    fill="#f68536"
                  />
                  <path
                    d="M6.8 3.6l1-.5 3.3 1.3-.9.1z"
                    fill="#6b3a19"
                  />
                  <path
                    d="M6.8 10.4l1 .5 3.3-1.3-.9-.1z"
                    fill="#fbbf93"
                  />
                  <path
                    d="M7 9l1.7.2.1-.2V4.8L7 5.1zM1.9 2.2L3 1.6l.1.2v10.3l-.1.3-1.1-.5z"
                    fill="#9d5025"
                  />
                  <path
                    d="M5.2 11.7l-2.2.7V1.6l2.2.7z"
                    fill="#f68536"
                  />
                  <path
                    d="M4.3 13.1l1.7.8.2-.2V.4L6 .1 4.3 1zm5.8-8.6l.9-.1.1.1v5l-.1.2-.9-.1z"
                    fill="#9d5025"
                  />
                  <g
                    fill="#f68536"
                  >
                    <path
                      d="M8.8 4.8v4.4L10.6 7z"
                    />
                    <path
                      d="M11 2.6L6 .1v13.8l5.7-2.9V3zm0 7.1l-3.3 1V3.4l3.3 1z"
                    />
                  </g>
                </svg>
              </span>
            </p>
            <p
              class="StyledProps--font StyledProps--main enabled"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                data-icon="main-service-ami"
              >
                <svg
                  height="16"
                  viewBox="0 0 12 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <mask
                    height="5"
                    id="main-service-ami_svg__a"
                    maskUnits="userSpaceOnUse"
                    width="6"
                    x="0"
                    y="0"
                  >
                    <path
                      d="M0 0h6v5H0z"
                      fill="#fff"
                    />
                  </mask>
                  <mask
                    height="4.9"
                    id="main-service-ami_svg__b"
                    maskUnits="userSpaceOnUse"
                    width="5.7"
                    x="0"
                    y="0"
                  >
                    <path
                      d="M0 0h5.7v5H0z"
                      fill="#fff"
                    />
                  </mask>
                  <mask
                    height="2"
                    id="main-service-ami_svg__c"
                    maskUnits="userSpaceOnUse"
                    width="11.5"
                    x="0"
                    y="0"
                  >
                    <path
                      d="M0 0h11.5v2H0z"
                      fill="#fff"
                    />
                  </mask>
                  <path
                    d="M.1 0c.6.3 1.2.6 1.8.8 1.3.6 2.6 1.3 3.9 1.9.1.2.2.3.2.5v1.6c0 .1 0 .2-.1.2-1.8-.4-3.5-.9-5.3-1.3-.2 0-.4 0-.5-.2v-.3V.3C0 .2 0 .1.1 0"
                    fill="#fb862e"
                    mask="url(#main-service-ami_svg__a)"
                    transform="translate(5.634 .02)"
                  />
                  <path
                    d="M5.7 0v3.5c0 .1-.1.1-.2.1-1.7.5-3.4.9-5.1 1.3-.1 0-.3.1-.4 0V3s0-.1.2-.2C2 1.9 3.8 1 5.7 0c-.1 0 0 0 0 0"
                    fill="#a0501e"
                    mask="url(#main-service-ami_svg__b)"
                    transform="translate(.042 .02)"
                  />
                  <path
                    d="M.1 1.4C.9 1.2 1.8 1 2.6.8c1-.2 2-.5 3-.7h.1c.7 0 1.3.2 1.9.3 1.2.3 2.5.6 3.7.9.1 0 .2 0 .2.1-1.2.1-2.4.2-3.7.4-.6.1-1.3.2-2 .2-.4.1-.8 0-1.3-.1-1.2-.1-2.3-.2-3.5-.3-.3-.1-.6-.1-.9-.2-.1.1-.1.1 0 0-.1 0-.1 0 0 0"
                    fill="#6e3915"
                    mask="url(#main-service-ami_svg__c)"
                    transform="translate(0 3.55)"
                  />
                  <path
                    d="M8.7 8.6c0 .2-.1.2-.3.3-.8.1-1.7.3-2.5.4h-.1c-.1 0-.1-.1-.1-.2V6.2c0-.1 0-.2.1-.3.6 0 1.2.1 1.9.1.3 0 .6 0 .9.1.1 0 .2 0 .2.1.1.1.1.1.1.2v1.9c-.1.1-.1.3-.2.3"
                    fill="#fb862e"
                  />
                  <path
                    d="M5.7 5.9v3.5c-.6-.2-1.2-.3-1.9-.4-.3-.1-.6-.1-.9-.2-.1-.8 0-1.6 0-2.4 0-.1 0-.2.1-.2 0 0 .1 0 .1-.1.8-.1 1.6-.2 2.5-.2zM5.9 13.9c0 .1-.1.1-.1 0-.6-.3-1.1-.6-1.7-.9-.1-.1-.2-.1-.1-.2v-.6s-.1-.1-.1-.2V10.1c.1-.1.2-.1.3 0 .5.1.9.2 1.4.3.2 0 .3 0 .5.1.1.2.1.4.1.6v.8c0 .6-.1 1.2 0 1.8-.2.1-.2.1-.3.2"
                    fill="#a0501e"
                  />
                  <path
                    d="M5.9 13.9c0-.9 0-1.9.1-2.8 0-.2.1-.4 0-.6 0-.1.1-.1.1-.1.5-.1 1.1-.3 1.6-.5h.2c.1.2.1.3.1.3V12c0 .1 0 .2-.1.3v.1c.1.5-.1.7-.5.9-.5.1-1 .4-1.5.6"
                    fill="#fb862e"
                  />
                  <path
                    d="M9.6 6.2c.6.1 1.2.1 1.8.2.1 0 .1.1.1.2v1.7c0 .1 0 .1-.1.2-.6.1-1.3.2-1.9.3h-.1c.1-.3.1-.6.1-.9V6.6c.1-.2.1-.3.1-.4"
                    fill="#fb872e"
                  />
                  <path
                    d="M1.7 8.6c-.5 0-1-.2-1.5-.3-.1 0-.1-.1-.1-.1V6.4c0-.1 0-.1.1-.1.5 0 1-.1 1.5-.2.1.1.1.2.1.3v2c0 .1 0 .2-.1.2"
                    fill="#a0501e"
                  />
                  <g
                    fill="#fb862e"
                  >
                    <path
                      d="M3.9 10.1v2.1c-.3 0-.6.2-.9.3-.1 0-.2.1-.3.1-.1-.1-.1-.1-.1-.2v-2.3-.2c0-.1.1-.1.1-.1.6-.1 1.1-.2 1.7-.3h.2v.3c-.1.1-.5.1-.7.3 0-.1 0-.1 0 0M10 11.5c.1.3-.1.5-.3.6-.3.1-.5.3-.8.4-.1 0-.1-.1-.1-.2v-.8-.3-1.4s0-.1.1-.1c.4-.1.7-.3 1.1-.3 0 .2 0 .2.1.3v1.6c0 .1-.1.2-.1.2M1.7 8.6V6.4v-.2h1.2v2.7c0-.2-.1-.2-.2-.2-.4-.1-.7 0-1-.1"
                    />
                  </g>
                  <path
                    d="M8.8 9.8v2.7c-.3-.1-.6-.2-.9-.2v-2.1-.2c-.5-.1-.9-.1-1.4-.3 0-.1-.1-.2.1-.2.7 0 1.3.2 2 .3z"
                    fill="#a0501c"
                  />
                  <path
                    d="M11.5 9.1c.1 0 .1 0 .1.1V11c0 .1 0 .1-.1.1-.4.1-.8.3-1.2.4h-.1V9.6v-.3c.1-.1.1-.1.2-.1.5 0 .8-.1 1.1-.1"
                    fill="#fb872e"
                  />
                  <path
                    d="M2.7 9.8v2.7l-.9-.6c-.2-.1 0-.3-.1-.5 0-.1-.1-.1-.1-.2V9.5l.1-.1c.4.2.7.2 1 .4"
                    fill="#a0501e"
                  />
                  <path
                    d="M9.6 6.2v2.4c0 .1-.1.1-.1.1-.3 0-.5 0-.8-.1 0-.8-.1-1.6 0-2.4z"
                    fill="#a1501e"
                  />
                  <path
                    d="M6.5 9.7c.5.1.9.2 1.3.3-.6.2-1.1.3-1.7.5-.1 0-.1 0-.2.1h-.3c-.6-.1-1.1-.3-1.7-.4-.1 0-.1 0-.2-.1.3-.1.7-.1 1-.2.6-.3 1.2-.4 1.8-.2"
                    fill="#fdbd8f"
                  />
                  <path
                    d="M1.7 9.5v1.9c-.2 0-.4.1-.7.1-.2 0-.2-.1-.2-.2v-.6-1.2-.3h.3c.5-.1 1.1-.1 1.6-.1.1.2 0 .2-.2.2-.2.1-.5.2-.8.2z"
                    fill="#fb862e"
                  />
                  <path
                    d="M.8 11.5l-.6-.3c-.1 0-.1-.1-.1-.2V9.2c0-.1.1 0 .1-.1.2 0 .4 0 .6.1.1 0 .2 0 .2.1v2c-.1.1-.1.2-.2.2"
                    fill="#a0501e"
                  />
                  <path
                    d="M10.4 9.3v2c0 .1 0 .2-.1.2H10V9.7c0-.1.1-.2-.1-.2-.3 0-.7-.1-1-.1-.1 0-.2 0-.2-.1 0-.2.1-.1.2-.1h1.3c0 .1.1 0 .2.1"
                    fill="#a1501c"
                  />
                  <path
                    d="M8.7 9.3c.3.1.7.1 1 .2.1 0 .2 0 .2.1-.4 0-.8.1-1.1.2-.8-.1-1.5-.2-2.2-.3.4-.1.9-.1 1.3-.2.3-.1.5 0 .8 0M1.7 9.5s-.1 0-.2-.1c.3 0 .7-.1 1-.1.1 0 .3.1.3-.2 0 .1.2.1.3.1.6-.1 1.1.1 1.6.1h.1c-.6.3-1.2.4-1.8.5h-.3c-.3-.1-.7-.2-1-.3"
                    fill="#fdbd8f"
                  />
                  <path
                    d="M.9 9.3c-.3-.1-.5-.2-.8-.2.2-.1.5-.1.7-.1.7-.1 1.3-.1 2 .1-.2.1-.4 0-.6.1-.5 0-.9.1-1.3.1zM10.4 9.3h-.2c-.1-.1-.2 0-.2 0H9.4c-.1-.1-.2 0-.2-.1.6-.2 1.2-.1 1.9-.1.2 0 .4 0 .6.1-.6 0-.9.1-1.3.1"
                    fill="#fdbd90"
                  />
                  <path
                    d="M.9 9.3v2c0 .1 0 .2.1.2-.1 0-.1.1-.2 0 .1 0 0-.1 0-.2.1-.7.1-1.3.1-2"
                    fill="#d58954"
                  />
                  <path
                    d="M8.8 12.5v-1.2c.1.3 0 .7 0 1v.2s0 .1 0 0"
                    fill="#f19754"
                  />
                  <path
                    d="M9.1 9.1c.1.1.2 0 .2.1h-.4c0-.1.1-.1.2-.1"
                    fill="#f9ceaf"
                  />
                  <path
                    d="M9.5 9.3c.1-.1.2-.1.2 0h-.2"
                    fill="#fad2b5"
                  />
                  <path
                    d="M9.9 9.2c.1 0 .2-.1.2.1 0 0-.1 0-.2-.1 0 .1 0 .1 0 0z"
                    fill="#f9d4ba"
                  />
                  <path
                    d="M9.9 9.2c0 .1 0 .1 0 0-.1.1-.1.1-.2 0z"
                    fill="#e1bea7"
                  />
                </svg>
              </span>
            </p>
            <p
              class="StyledProps--font StyledProps--main enabled"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                data-icon="app-kubernetes"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 30"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                  >
                    <path
                      d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                      fill="#326CE5"
                    />
                    <path
                      d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                      fill="#FFF"
                      stroke="#FFF"
                      stroke-width="0.25"
                    />
                  </g>
                </svg>
              </span>
            </p>
            <p
              class="StyledProps--font StyledProps--main enabled"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                data-icon="command-winrm"
              >
                <svg
                  height="16"
                  viewBox="0 0 14 11"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 0c-.2 0-.5 0-.7.2S2 .6 2 .9C1.3 3.8.7 6.7 0 9.7c0 .3 0 .6.2.9s.5.4.9.4H11c.3 0 .5-.1.7-.3s.3-.4.3-.6c.6-2.9 1.3-5.9 1.9-8.8.1-.3.1-.7-.1-.9s-.5-.4-.9-.4zm0 1h9.9v.1C12.3 4 11.6 7 11 9.9v.1H1v-.1C1.6 6.9 2.3 4 3 1c-.1 0 0 0 0 0zm1.8.5c-.3 0-.6.2-.7.4s-.1.6.1.9l2.4 2.6-3.8 2.7c-.2.2-.3.5-.3.7s.2.5.5.6.5.1.8-.1L8.3 6c.2-.1.3-.3.3-.5s-.1-.4-.2-.6l-3-3.2c-.2-.1-.4-.2-.6-.2zM6.7 8c-.2 0-.5.1-.6.4-.1.2-.1.5 0 .7s.4.4.7.4h2c.3 0 .5-.1.7-.4.1-.2.1-.5 0-.8-.2-.2-.5-.3-.8-.3z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </p>
            <p
              class="StyledProps--font StyledProps--main enabled"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                data-icon="service-pivotal"
              >
                <svg
                  height="16"
                  viewBox="0 0 14 11"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.2 8.5c0-2.2-1.8-4-4-4s-4 1.8-4 4c0 .4 0 .7.1 1.1 0 .1.1.3.1.4h1.3c.1 0 .2-.1.2-.2v-.1c0-.1-.1-.2-.1-.2-.6-1.4 0-2.9 1.4-3.5S6 6 6.6 7.4c.3.7.3 1.5 0 2.1 0 .1-.1.2-.1.3s0 .2.1.2H7.8c.1 0 .1 0 .1-.1.1-.1.1-.2.1-.4.1-.3.2-.7.2-1z"
                    fill="#008774"
                  />
                  <path
                    d="M8.7 3.1c-2.8 0-5.1 2.3-5.1 5.1 0 .4.1.9.2 1.3 0 .1.1.3.1.4.1.1.1.1.2.1h1.1c.1 0 .2-.1.2-.2v-.1c0-.1-.1-.2-.1-.3-.7-2 .3-4.1 2.3-4.8s4 .4 4.7 2.4c.3.8.3 1.7 0 2.6 0 .1-.1.2-.1.3s0 .2.1.2H13.5c.1 0 .1 0 .1-.1s.1-.3.1-.4c.7-2.7-.9-5.5-3.6-6.2-.5-.2-.9-.3-1.4-.3z"
                    fill="#00ae9e"
                  />
                  <path
                    d="M11.6 4.5C11.6 2 9.5 0 7.1 0 4.6 0 2.5 2 2.5 4.5v.4h1.3C3.7 3.1 5 1.6 6.7 1.4c1.8-.2 3.3 1.1 3.5 2.9v.4c0 .6-.3 1.2-.6 1.7-.1.1 0 .2 0 .2h1.3c.1 0 .1 0 .2-.1.3-.6.5-1.3.5-2z"
                    fill="#008774"
                  />
                </svg>
              </span>
            </p>
            <p
              class="StyledProps--font StyledProps--main enabled"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                data-icon="app-aws-lambda"
              >
                <svg
                  height="16"
                  viewBox="0 0 26 27"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.706 14.587a34419.9 34419.9 0 00-3.838 5.664 4042.86 4042.86 0 01-3.574 5.266.241.241 0 01-.17.099c-1.683-.015-3.367-.033-5.05-.055-.018 0-.037-.006-.074-.011a.902.902 0 01.047-.103l3.523-5.473 3.126-4.848c1.156-1.795 2.31-3.592 3.465-5.39.17-.265.348-.525.51-.795a.329.329 0 00.034-.238c-.31-.995-.628-1.986-.945-2.978-.135-.424-.277-.847-.404-1.274-.041-.137-.109-.179-.249-.178-1.058.004-2.109.003-3.164.003-.2 0-.2 0-.2-.198 0-1.3 0-2.6-.004-3.9 0-.144.047-.176.183-.176 2.123.003 4.247.003 6.37 0a.205.205 0 01.225.151 36080.34 36080.34 0 007.279 18.34c.405 1.02.814 2.042 1.216 3.066.047.124.097.148.223.11 1.113-.346 2.228-.681 3.34-1.027.14-.043.192-.014.235.125.38 1.196.767 2.389 1.151 3.583.013.041.023.083.039.14-.08.03-.154.063-.23.084-2.53.803-5.06 1.608-7.587 2.412-.12.038-.157-.003-.197-.105-.772-1.96-1.546-3.92-2.321-5.88l-2.277-5.754-.34-.866c-.018-.049-.043-.092-.08-.168l-.262.374z"
                    fill="#FA7E14"
                  />
                </svg>
              </span>
            </p>
          </div>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card card infoCard cd"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
        >
          <span
            class="bp3-icon StyledProps--main cdMain"
            data-icon="cd-solid"
          >
            <svg
              fill="none"
              height="40"
              viewBox="0 0 32 32"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="cd-solid_svg__a"
                x1="6.774"
                x2="21.5"
                y1="2"
                y2="30"
              >
                <stop
                  offset="0"
                  stop-color="#62f91f"
                />
                <stop
                  offset="1"
                  stop-color="#45bd35"
                />
              </lineargradient>
              <path
                clip-rule="evenodd"
                d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.036-.02zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925c-.33 1.245-.161 2.545.479 3.664s1.67 1.917 2.905 2.251a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                fill="url(#cd-solid_svg__a)"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
              >
                common.purpose.cd.newGen.title
              </p>
              <p
                class="StyledProps--font StyledProps--main new StyledProps--background-primary5 StyledProps--color StyledProps--color-white StyledProps--border StyledProps--font-align-center StyledProps--font-size-small StyledProps--font-weight-light"
                style="width: 48px; height: 22px;"
              >
                COMMON.NEW
              </p>
            </div>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small StyledProps--color StyledProps--color-black"
        >
          common.purpose.cd.newGen.description
        </p>
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-top-large"
        >
          <p
            class="StyledProps--font StyledProps--main footerTitle StyledProps--color StyledProps--color-black"
          >
            common.purpose.cd.supportedStack
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main enabled"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                data-icon="app-kubernetes"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 30"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                  >
                    <path
                      d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                      fill="#326CE5"
                    />
                    <path
                      d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                      fill="#FFF"
                      stroke="#FFF"
                      stroke-width="0.25"
                    />
                  </g>
                </svg>
              </span>
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target Text--targetClass"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                  tabindex="0"
                >
                  <span
                    class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                    data-icon="app-aws-code-deploy"
                    style="opacity: 0.5;"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 28 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                      >
                        <path
                          d="M4 26l-4-1.732V6.732L4 5z"
                          fill="#4B612C"
                        />
                        <path
                          d="M18 22.536L3 26V5l15 3.464z"
                          fill="#759C3E"
                        />
                        <path
                          d="M7 12.8l6.781-.8.219.2v6.6l-.219.2L7 18.2z"
                          fill="#4B612C"
                        />
                        <path
                          d="M28 11.25l-6.682.75L7 9.5 14.398 7z"
                          fill="#3C4929"
                        />
                        <path
                          d="M27 21.667L20.318 21 6 23.222 13.875 25z"
                          fill="#B7CA9D"
                        />
                        <path
                          d="M7 28.786L13.781 32 14 24.714 7 23z"
                          fill="#4B612C"
                        />
                        <path
                          d="M26 25.714L14 32v-7.633L26 21z"
                          fill="#759C3E"
                        />
                        <path
                          d="M7 3.214L14 0v7.286L7 9z"
                          fill="#4B612C"
                        />
                        <path
                          d="M27.25 18.667L13 20.3v-8.167L27.25 14zm0-7L13 8.167V.233l14.25 6.534z"
                          fill="#759C3E"
                        />
                      </g>
                    </svg>
                  </span>
                </p>
              </span>
            </span>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target Text--targetClass"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                  tabindex="0"
                >
                  <span
                    class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                    data-icon="service-aws-lamda"
                    style="opacity: 0.5;"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 12 14"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M.3 11.1l.7.4.1-.2V2.6L.3 3z"
                        fill="#9d5025"
                      />
                      <path
                        d="M2.5 3l-1.4-.4v8.8l1.4-.3z"
                        fill="#f68536"
                      />
                      <path
                        d="M6.8 3.6l1-.5 3.3 1.3-.9.1z"
                        fill="#6b3a19"
                      />
                      <path
                        d="M6.8 10.4l1 .5 3.3-1.3-.9-.1z"
                        fill="#fbbf93"
                      />
                      <path
                        d="M7 9l1.7.2.1-.2V4.8L7 5.1zM1.9 2.2L3 1.6l.1.2v10.3l-.1.3-1.1-.5z"
                        fill="#9d5025"
                      />
                      <path
                        d="M5.2 11.7l-2.2.7V1.6l2.2.7z"
                        fill="#f68536"
                      />
                      <path
                        d="M4.3 13.1l1.7.8.2-.2V.4L6 .1 4.3 1zm5.8-8.6l.9-.1.1.1v5l-.1.2-.9-.1z"
                        fill="#9d5025"
                      />
                      <g
                        fill="#f68536"
                      >
                        <path
                          d="M8.8 4.8v4.4L10.6 7z"
                        />
                        <path
                          d="M11 2.6L6 .1v13.8l5.7-2.9V3zm0 7.1l-3.3 1V3.4l3.3 1z"
                        />
                      </g>
                    </svg>
                  </span>
                </p>
              </span>
            </span>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target Text--targetClass"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                  tabindex="0"
                >
                  <span
                    class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                    data-icon="main-service-ami"
                    style="opacity: 0.5;"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 12 14"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <mask
                        height="5"
                        id="main-service-ami_svg__a"
                        maskUnits="userSpaceOnUse"
                        width="6"
                        x="0"
                        y="0"
                      >
                        <path
                          d="M0 0h6v5H0z"
                          fill="#fff"
                        />
                      </mask>
                      <mask
                        height="4.9"
                        id="main-service-ami_svg__b"
                        maskUnits="userSpaceOnUse"
                        width="5.7"
                        x="0"
                        y="0"
                      >
                        <path
                          d="M0 0h5.7v5H0z"
                          fill="#fff"
                        />
                      </mask>
                      <mask
                        height="2"
                        id="main-service-ami_svg__c"
                        maskUnits="userSpaceOnUse"
                        width="11.5"
                        x="0"
                        y="0"
                      >
                        <path
                          d="M0 0h11.5v2H0z"
                          fill="#fff"
                        />
                      </mask>
                      <path
                        d="M.1 0c.6.3 1.2.6 1.8.8 1.3.6 2.6 1.3 3.9 1.9.1.2.2.3.2.5v1.6c0 .1 0 .2-.1.2-1.8-.4-3.5-.9-5.3-1.3-.2 0-.4 0-.5-.2v-.3V.3C0 .2 0 .1.1 0"
                        fill="#fb862e"
                        mask="url(#main-service-ami_svg__a)"
                        transform="translate(5.634 .02)"
                      />
                      <path
                        d="M5.7 0v3.5c0 .1-.1.1-.2.1-1.7.5-3.4.9-5.1 1.3-.1 0-.3.1-.4 0V3s0-.1.2-.2C2 1.9 3.8 1 5.7 0c-.1 0 0 0 0 0"
                        fill="#a0501e"
                        mask="url(#main-service-ami_svg__b)"
                        transform="translate(.042 .02)"
                      />
                      <path
                        d="M.1 1.4C.9 1.2 1.8 1 2.6.8c1-.2 2-.5 3-.7h.1c.7 0 1.3.2 1.9.3 1.2.3 2.5.6 3.7.9.1 0 .2 0 .2.1-1.2.1-2.4.2-3.7.4-.6.1-1.3.2-2 .2-.4.1-.8 0-1.3-.1-1.2-.1-2.3-.2-3.5-.3-.3-.1-.6-.1-.9-.2-.1.1-.1.1 0 0-.1 0-.1 0 0 0"
                        fill="#6e3915"
                        mask="url(#main-service-ami_svg__c)"
                        transform="translate(0 3.55)"
                      />
                      <path
                        d="M8.7 8.6c0 .2-.1.2-.3.3-.8.1-1.7.3-2.5.4h-.1c-.1 0-.1-.1-.1-.2V6.2c0-.1 0-.2.1-.3.6 0 1.2.1 1.9.1.3 0 .6 0 .9.1.1 0 .2 0 .2.1.1.1.1.1.1.2v1.9c-.1.1-.1.3-.2.3"
                        fill="#fb862e"
                      />
                      <path
                        d="M5.7 5.9v3.5c-.6-.2-1.2-.3-1.9-.4-.3-.1-.6-.1-.9-.2-.1-.8 0-1.6 0-2.4 0-.1 0-.2.1-.2 0 0 .1 0 .1-.1.8-.1 1.6-.2 2.5-.2zM5.9 13.9c0 .1-.1.1-.1 0-.6-.3-1.1-.6-1.7-.9-.1-.1-.2-.1-.1-.2v-.6s-.1-.1-.1-.2V10.1c.1-.1.2-.1.3 0 .5.1.9.2 1.4.3.2 0 .3 0 .5.1.1.2.1.4.1.6v.8c0 .6-.1 1.2 0 1.8-.2.1-.2.1-.3.2"
                        fill="#a0501e"
                      />
                      <path
                        d="M5.9 13.9c0-.9 0-1.9.1-2.8 0-.2.1-.4 0-.6 0-.1.1-.1.1-.1.5-.1 1.1-.3 1.6-.5h.2c.1.2.1.3.1.3V12c0 .1 0 .2-.1.3v.1c.1.5-.1.7-.5.9-.5.1-1 .4-1.5.6"
                        fill="#fb862e"
                      />
                      <path
                        d="M9.6 6.2c.6.1 1.2.1 1.8.2.1 0 .1.1.1.2v1.7c0 .1 0 .1-.1.2-.6.1-1.3.2-1.9.3h-.1c.1-.3.1-.6.1-.9V6.6c.1-.2.1-.3.1-.4"
                        fill="#fb872e"
                      />
                      <path
                        d="M1.7 8.6c-.5 0-1-.2-1.5-.3-.1 0-.1-.1-.1-.1V6.4c0-.1 0-.1.1-.1.5 0 1-.1 1.5-.2.1.1.1.2.1.3v2c0 .1 0 .2-.1.2"
                        fill="#a0501e"
                      />
                      <g
                        fill="#fb862e"
                      >
                        <path
                          d="M3.9 10.1v2.1c-.3 0-.6.2-.9.3-.1 0-.2.1-.3.1-.1-.1-.1-.1-.1-.2v-2.3-.2c0-.1.1-.1.1-.1.6-.1 1.1-.2 1.7-.3h.2v.3c-.1.1-.5.1-.7.3 0-.1 0-.1 0 0M10 11.5c.1.3-.1.5-.3.6-.3.1-.5.3-.8.4-.1 0-.1-.1-.1-.2v-.8-.3-1.4s0-.1.1-.1c.4-.1.7-.3 1.1-.3 0 .2 0 .2.1.3v1.6c0 .1-.1.2-.1.2M1.7 8.6V6.4v-.2h1.2v2.7c0-.2-.1-.2-.2-.2-.4-.1-.7 0-1-.1"
                        />
                      </g>
                      <path
                        d="M8.8 9.8v2.7c-.3-.1-.6-.2-.9-.2v-2.1-.2c-.5-.1-.9-.1-1.4-.3 0-.1-.1-.2.1-.2.7 0 1.3.2 2 .3z"
                        fill="#a0501c"
                      />
                      <path
                        d="M11.5 9.1c.1 0 .1 0 .1.1V11c0 .1 0 .1-.1.1-.4.1-.8.3-1.2.4h-.1V9.6v-.3c.1-.1.1-.1.2-.1.5 0 .8-.1 1.1-.1"
                        fill="#fb872e"
                      />
                      <path
                        d="M2.7 9.8v2.7l-.9-.6c-.2-.1 0-.3-.1-.5 0-.1-.1-.1-.1-.2V9.5l.1-.1c.4.2.7.2 1 .4"
                        fill="#a0501e"
                      />
                      <path
                        d="M9.6 6.2v2.4c0 .1-.1.1-.1.1-.3 0-.5 0-.8-.1 0-.8-.1-1.6 0-2.4z"
                        fill="#a1501e"
                      />
                      <path
                        d="M6.5 9.7c.5.1.9.2 1.3.3-.6.2-1.1.3-1.7.5-.1 0-.1 0-.2.1h-.3c-.6-.1-1.1-.3-1.7-.4-.1 0-.1 0-.2-.1.3-.1.7-.1 1-.2.6-.3 1.2-.4 1.8-.2"
                        fill="#fdbd8f"
                      />
                      <path
                        d="M1.7 9.5v1.9c-.2 0-.4.1-.7.1-.2 0-.2-.1-.2-.2v-.6-1.2-.3h.3c.5-.1 1.1-.1 1.6-.1.1.2 0 .2-.2.2-.2.1-.5.2-.8.2z"
                        fill="#fb862e"
                      />
                      <path
                        d="M.8 11.5l-.6-.3c-.1 0-.1-.1-.1-.2V9.2c0-.1.1 0 .1-.1.2 0 .4 0 .6.1.1 0 .2 0 .2.1v2c-.1.1-.1.2-.2.2"
                        fill="#a0501e"
                      />
                      <path
                        d="M10.4 9.3v2c0 .1 0 .2-.1.2H10V9.7c0-.1.1-.2-.1-.2-.3 0-.7-.1-1-.1-.1 0-.2 0-.2-.1 0-.2.1-.1.2-.1h1.3c0 .1.1 0 .2.1"
                        fill="#a1501c"
                      />
                      <path
                        d="M8.7 9.3c.3.1.7.1 1 .2.1 0 .2 0 .2.1-.4 0-.8.1-1.1.2-.8-.1-1.5-.2-2.2-.3.4-.1.9-.1 1.3-.2.3-.1.5 0 .8 0M1.7 9.5s-.1 0-.2-.1c.3 0 .7-.1 1-.1.1 0 .3.1.3-.2 0 .1.2.1.3.1.6-.1 1.1.1 1.6.1h.1c-.6.3-1.2.4-1.8.5h-.3c-.3-.1-.7-.2-1-.3"
                        fill="#fdbd8f"
                      />
                      <path
                        d="M.9 9.3c-.3-.1-.5-.2-.8-.2.2-.1.5-.1.7-.1.7-.1 1.3-.1 2 .1-.2.1-.4 0-.6.1-.5 0-.9.1-1.3.1zM10.4 9.3h-.2c-.1-.1-.2 0-.2 0H9.4c-.1-.1-.2 0-.2-.1.6-.2 1.2-.1 1.9-.1.2 0 .4 0 .6.1-.6 0-.9.1-1.3.1"
                        fill="#fdbd90"
                      />
                      <path
                        d="M.9 9.3v2c0 .1 0 .2.1.2-.1 0-.1.1-.2 0 .1 0 0-.1 0-.2.1-.7.1-1.3.1-2"
                        fill="#d58954"
                      />
                      <path
                        d="M8.8 12.5v-1.2c.1.3 0 .7 0 1v.2s0 .1 0 0"
                        fill="#f19754"
                      />
                      <path
                        d="M9.1 9.1c.1.1.2 0 .2.1h-.4c0-.1.1-.1.2-.1"
                        fill="#f9ceaf"
                      />
                      <path
                        d="M9.5 9.3c.1-.1.2-.1.2 0h-.2"
                        fill="#fad2b5"
                      />
                      <path
                        d="M9.9 9.2c.1 0 .2-.1.2.1 0 0-.1 0-.2-.1 0 .1 0 .1 0 0z"
                        fill="#f9d4ba"
                      />
                      <path
                        d="M9.9 9.2c0 .1 0 .1 0 0-.1.1-.1.1-.2 0z"
                        fill="#e1bea7"
                      />
                    </svg>
                  </span>
                </p>
              </span>
            </span>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target Text--targetClass"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                  tabindex="0"
                >
                  <span
                    class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                    data-icon="command-winrm"
                    style="opacity: 0.5;"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 14 11"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 0c-.2 0-.5 0-.7.2S2 .6 2 .9C1.3 3.8.7 6.7 0 9.7c0 .3 0 .6.2.9s.5.4.9.4H11c.3 0 .5-.1.7-.3s.3-.4.3-.6c.6-2.9 1.3-5.9 1.9-8.8.1-.3.1-.7-.1-.9s-.5-.4-.9-.4zm0 1h9.9v.1C12.3 4 11.6 7 11 9.9v.1H1v-.1C1.6 6.9 2.3 4 3 1c-.1 0 0 0 0 0zm1.8.5c-.3 0-.6.2-.7.4s-.1.6.1.9l2.4 2.6-3.8 2.7c-.2.2-.3.5-.3.7s.2.5.5.6.5.1.8-.1L8.3 6c.2-.1.3-.3.3-.5s-.1-.4-.2-.6l-3-3.2c-.2-.1-.4-.2-.6-.2zM6.7 8c-.2 0-.5.1-.6.4-.1.2-.1.5 0 .7s.4.4.7.4h2c.3 0 .5-.1.7-.4.1-.2.1-.5 0-.8-.2-.2-.5-.3-.8-.3z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </p>
              </span>
            </span>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target Text--targetClass"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                  tabindex="0"
                >
                  <span
                    class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                    data-icon="service-pivotal"
                    style="opacity: 0.5;"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 14 11"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.2 8.5c0-2.2-1.8-4-4-4s-4 1.8-4 4c0 .4 0 .7.1 1.1 0 .1.1.3.1.4h1.3c.1 0 .2-.1.2-.2v-.1c0-.1-.1-.2-.1-.2-.6-1.4 0-2.9 1.4-3.5S6 6 6.6 7.4c.3.7.3 1.5 0 2.1 0 .1-.1.2-.1.3s0 .2.1.2H7.8c.1 0 .1 0 .1-.1.1-.1.1-.2.1-.4.1-.3.2-.7.2-1z"
                        fill="#008774"
                      />
                      <path
                        d="M8.7 3.1c-2.8 0-5.1 2.3-5.1 5.1 0 .4.1.9.2 1.3 0 .1.1.3.1.4.1.1.1.1.2.1h1.1c.1 0 .2-.1.2-.2v-.1c0-.1-.1-.2-.1-.3-.7-2 .3-4.1 2.3-4.8s4 .4 4.7 2.4c.3.8.3 1.7 0 2.6 0 .1-.1.2-.1.3s0 .2.1.2H13.5c.1 0 .1 0 .1-.1s.1-.3.1-.4c.7-2.7-.9-5.5-3.6-6.2-.5-.2-.9-.3-1.4-.3z"
                        fill="#00ae9e"
                      />
                      <path
                        d="M11.6 4.5C11.6 2 9.5 0 7.1 0 4.6 0 2.5 2 2.5 4.5v.4h1.3C3.7 3.1 5 1.6 6.7 1.4c1.8-.2 3.3 1.1 3.5 2.9v.4c0 .6-.3 1.2-.6 1.7-.1.1 0 .2 0 .2h1.3c.1 0 .1 0 .2-.1.3-.6.5-1.3.5-2z"
                        fill="#008774"
                      />
                    </svg>
                  </span>
                </p>
              </span>
            </span>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target Text--targetClass"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                  tabindex="0"
                >
                  <span
                    class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                    data-icon="app-aws-lambda"
                    style="opacity: 0.5;"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 26 27"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12.706 14.587a34419.9 34419.9 0 00-3.838 5.664 4042.86 4042.86 0 01-3.574 5.266.241.241 0 01-.17.099c-1.683-.015-3.367-.033-5.05-.055-.018 0-.037-.006-.074-.011a.902.902 0 01.047-.103l3.523-5.473 3.126-4.848c1.156-1.795 2.31-3.592 3.465-5.39.17-.265.348-.525.51-.795a.329.329 0 00.034-.238c-.31-.995-.628-1.986-.945-2.978-.135-.424-.277-.847-.404-1.274-.041-.137-.109-.179-.249-.178-1.058.004-2.109.003-3.164.003-.2 0-.2 0-.2-.198 0-1.3 0-2.6-.004-3.9 0-.144.047-.176.183-.176 2.123.003 4.247.003 6.37 0a.205.205 0 01.225.151 36080.34 36080.34 0 007.279 18.34c.405 1.02.814 2.042 1.216 3.066.047.124.097.148.223.11 1.113-.346 2.228-.681 3.34-1.027.14-.043.192-.014.235.125.38 1.196.767 2.389 1.151 3.583.013.041.023.083.039.14-.08.03-.154.063-.23.084-2.53.803-5.06 1.608-7.587 2.412-.12.038-.157-.003-.197-.105-.772-1.96-1.546-3.92-2.321-5.88l-2.277-5.754-.34-.866c-.018-.049-.043-.092-.08-.168l-.262.374z"
                        fill="#FA7E14"
                      />
                    </svg>
                  </span>
                </p>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <a
      class="compareVersion"
      href="https://ngdocs.harness.io/article/1fjmm4by22-harness-first-gen-vs-harness-next-gen"
      rel="noreferrer"
      target="_blank"
    >
      common.purpose.compare
    </a>
    <button
      class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main StyledProps--border StyledProps--font StyledProps--font-align-center StyledProps--padding-medium StyledProps--intent-primary Button--with-current-color"
      disabled=""
      style="width: 270px; height: 2.5px;"
      tabindex="-1"
      type="button"
    >
      <div
        class="bp3-spinner bp3-button-spinner"
      >
        <div
          class="bp3-spinner-animation"
        >
          <svg
            height="20"
            stroke-width="16.00"
            viewBox="-3.00 -3.00 106.00 106.00"
            width="20"
          >
            <path
              class="bp3-spinner-track"
              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            />
            <path
              class="bp3-spinner-head"
              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              pathLength="280"
              stroke-dasharray="280 280"
              stroke-dashoffset="210"
            />
          </svg>
        </div>
      </div>
      <span
        class="bp3-button-text"
      >
        common.launchFirstGen
      </span>
    </button>
  </div>
</div>
`;

exports[`StartTrialModalContent Rendering test that adding a source query param updates the button text 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-xxxlarge"
  >
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-top-xxlarge"
    >
      common.purpose.welcome
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="ce-main"
      >
        <svg
          height="25"
          viewBox="0 0 32 32"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.84 26.552a.5.5 0 00.5.5h8.343v-.005a6.579 6.579 0 00.284-13.13.548.548 0 01-.492-.429C23.563 9.21 19.761 6 15.21 6a9.473 9.473 0 00-9.474 9.473c0 .056-.039.103-.093.114a5.791 5.791 0 001.146 11.465h6.661a.5.5 0 00.5-.5v-1.568a.527.527 0 00-.436-.51c-1.04-.2-1.932-.63-2.542-1.244-.546-.55-.872-1.232-.973-2.032-.035-.277.194-.505.474-.504l1.113.005c.268.001.48.215.541.475.256 1.093 1.245 1.813 2.711 1.82.571.003 2.7-.264 2.707-1.736.006-1.177-1.542-1.623-3.006-1.984a38.2 38.2 0 01-.758-.193c-1.656-.44-3.407-.943-3.398-3.062.01-2.058 1.742-3.119 3.567-3.335V10.71a.5.5 0 01.5-.5h.887a.5.5 0 01.5.5v2.028c1.316.212 3.089.878 3.39 2.906.04.28-.19.512-.472.511l-1.12-.005c-.256-.001-.463-.2-.54-.445-.29-.926-1.2-1.488-2.532-1.494-.886-.005-2.17.466-2.176 1.54-.005.973.74 1.305 3.52 2.023l.369.094.148.036c1.06.256 3.232.78 3.221 3.11-.008 1.839-1.265 3.096-3.364 3.47a.526.526 0 00-.442.511v1.557z"
            fill="url(#ce-main_svg__a)"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ce-main_svg__a"
              x1="5.821"
              x2="19.271"
              y1="4.393"
              y2="33.469"
            >
              <stop
                stop-color="#00CFDE"
              />
              <stop
                offset="1"
                stop-color="#05A660"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
      >
        ce.continuous
      </p>
    </div>
    <span
      style="line-height: 2; font-size: small;"
    >
      common.purpose.ce.description
    </span>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--border StyledProps--font StyledProps--font-align-center StyledProps--padding-medium StyledProps--intent-primary Button--with-current-color"
      style="width: 270px; height: 2.5px;"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        continue
      </span>
    </button>
  </div>
</div>
`;

exports[`StartTrialModalContent Rendering test that the warning container renders 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-xxxlarge"
  >
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-top-xxlarge"
    >
      common.purpose.welcome
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="ce-main"
      >
        <svg
          height="25"
          viewBox="0 0 32 32"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.84 26.552a.5.5 0 00.5.5h8.343v-.005a6.579 6.579 0 00.284-13.13.548.548 0 01-.492-.429C23.563 9.21 19.761 6 15.21 6a9.473 9.473 0 00-9.474 9.473c0 .056-.039.103-.093.114a5.791 5.791 0 001.146 11.465h6.661a.5.5 0 00.5-.5v-1.568a.527.527 0 00-.436-.51c-1.04-.2-1.932-.63-2.542-1.244-.546-.55-.872-1.232-.973-2.032-.035-.277.194-.505.474-.504l1.113.005c.268.001.48.215.541.475.256 1.093 1.245 1.813 2.711 1.82.571.003 2.7-.264 2.707-1.736.006-1.177-1.542-1.623-3.006-1.984a38.2 38.2 0 01-.758-.193c-1.656-.44-3.407-.943-3.398-3.062.01-2.058 1.742-3.119 3.567-3.335V10.71a.5.5 0 01.5-.5h.887a.5.5 0 01.5.5v2.028c1.316.212 3.089.878 3.39 2.906.04.28-.19.512-.472.511l-1.12-.005c-.256-.001-.463-.2-.54-.445-.29-.926-1.2-1.488-2.532-1.494-.886-.005-2.17.466-2.176 1.54-.005.973.74 1.305 3.52 2.023l.369.094.148.036c1.06.256 3.232.78 3.221 3.11-.008 1.839-1.265 3.096-3.364 3.47a.526.526 0 00-.442.511v1.557z"
            fill="url(#ce-main_svg__a)"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ce-main_svg__a"
              x1="5.821"
              x2="19.271"
              y1="4.393"
              y2="33.469"
            >
              <stop
                stop-color="#00CFDE"
              />
              <stop
                offset="1"
                stop-color="#05A660"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
      >
        ce.continuous
      </p>
    </div>
    <span
      style="line-height: 2; font-size: small;"
    >
      common.purpose.ce.description
    </span>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--border StyledProps--font StyledProps--font-align-center StyledProps--padding-medium StyledProps--intent-primary Button--with-current-color"
      style="width: 270px; height: 2.5px;"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.startTrial
      </span>
    </button>
  </div>
</div>
`;

exports[`StartTrialModalContent Rendering that the content renders 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-xxxlarge"
  >
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-top-xxlarge"
    >
      common.purpose.welcome
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="ce-main"
      >
        <svg
          height="25"
          viewBox="0 0 32 32"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.84 26.552a.5.5 0 00.5.5h8.343v-.005a6.579 6.579 0 00.284-13.13.548.548 0 01-.492-.429C23.563 9.21 19.761 6 15.21 6a9.473 9.473 0 00-9.474 9.473c0 .056-.039.103-.093.114a5.791 5.791 0 001.146 11.465h6.661a.5.5 0 00.5-.5v-1.568a.527.527 0 00-.436-.51c-1.04-.2-1.932-.63-2.542-1.244-.546-.55-.872-1.232-.973-2.032-.035-.277.194-.505.474-.504l1.113.005c.268.001.48.215.541.475.256 1.093 1.245 1.813 2.711 1.82.571.003 2.7-.264 2.707-1.736.006-1.177-1.542-1.623-3.006-1.984a38.2 38.2 0 01-.758-.193c-1.656-.44-3.407-.943-3.398-3.062.01-2.058 1.742-3.119 3.567-3.335V10.71a.5.5 0 01.5-.5h.887a.5.5 0 01.5.5v2.028c1.316.212 3.089.878 3.39 2.906.04.28-.19.512-.472.511l-1.12-.005c-.256-.001-.463-.2-.54-.445-.29-.926-1.2-1.488-2.532-1.494-.886-.005-2.17.466-2.176 1.54-.005.973.74 1.305 3.52 2.023l.369.094.148.036c1.06.256 3.232.78 3.221 3.11-.008 1.839-1.265 3.096-3.364 3.47a.526.526 0 00-.442.511v1.557z"
            fill="url(#ce-main_svg__a)"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ce-main_svg__a"
              x1="5.821"
              x2="19.271"
              y1="4.393"
              y2="33.469"
            >
              <stop
                stop-color="#00CFDE"
              />
              <stop
                offset="1"
                stop-color="#05A660"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
      >
        ce.continuous
      </p>
    </div>
    <span
      style="line-height: 2; font-size: small;"
    >
      common.purpose.ce.description
    </span>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--border StyledProps--font StyledProps--font-align-center StyledProps--padding-medium StyledProps--intent-primary Button--with-current-color"
      style="width: 270px; height: 2.5px;"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.startTrial
      </span>
    </button>
  </div>
</div>
`;
